video_user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: video-stream
spec:
  containers:
    - name: my-container
      image: registry.cn-hangzhou.aliyuncs.com/offersmaker/video_stream:latest
      command: ["/bin/sh","-ce","sleep 3600"]
      ports:
        - containerPort : 9000
  imagePullSecrets:
    - name: offermaker
