video-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - http:
        paths:
          - path: /stream/
            pathType: Prefix
            backend:
              service:
                name: video-stream
                port:
                  number: 9000
          - path: /user/
            pathType: Prefix
            backend:
              service:
                name: video-user
                port:
                  number: 9001
