video_user_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-stream-ingress
spec:
  rules:
    - host: videostream.com
      http:
        paths:
          - path: /api/v1/video
            pathType: Prefix
            backend:
              service:
                name: video-stream
                port:
                  number: 9000
          - path: /api/v1/comment
            pathType: Prefix
            backend:
              service:
                name: video-stream
                port:
                  number: 9000
          - path: /api/v1/rate
            pathType: Prefix
            backend:
              service:
                name: video-stream
                port:
                  number: 9000
